Updated the heading

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>DOM Pagination</title>
+    <title>Pagination</title>
 </head>
 <body>
     <header>
-        <h1>Users</h1>
+        <h1>List Items</h1>
     </header>
     <main>
         <div class="list" id="list"></div>
